--- a/templates/base/backoffice/sidebar.html
+++ b/templates/base/backoffice/sidebar.html
@@ -34,12 +34,14 @@
 
                 <li class="sidebar-title text-muted">Catalogo</li>
 
+                {% if perms.backoffice.view_service %}
                 <li class="sidebar-item  ">
                     <a href="ui-file-uploader.html" class='sidebar-link'>
                         <i class="bi bi-scissors"></i>
                         <span>Servicios</span>
                     </a>
                 </li>
+                {% endif %}
 
                 <li class="sidebar-item  ">
                     <a href="ui-file-uploader.html" class='sidebar-link'>
@@ -51,12 +53,14 @@
 
                 <li class="sidebar-title text-muted">Operaciones</li>
 
+                {% if perms.backoffice.view_order %}
                 <li class="sidebar-item  ">
                     <a href="ui-file-uploader.html" class='sidebar-link'>
                         <i class="bi bi-receipt"></i>
                         <span>Ordenes</span>
                     </a>
                 </li>
+                {% endif %}
 
                 <li class="sidebar-item  ">
                     <a href="ui-file-uploader.html" class='sidebar-link'>
