Add backoffice template tags, service filtering, and pagination features
- Created `backoffice_extras.py` for custom template tags including `param_replace` and `get_pagination_range`.
- Updated `ServiceListView` to use `FilterView` for service filtering with `ServiceFilter`.
- Enhanced service list template with filtering options and pagination.
- Added JavaScript utility functions for cookie retrieval and tooltip initialization.
- Implemented SweetAlert2 for service deletion confirmation in the service list.
- Updated base template to include new JavaScript utilities and fixed static file paths.
- Added new pagination template for cleaner pagination handling.
- Adjusted service form and delete templates for improved structure and user experience.

--- a/templates/base/backoffice/base.html
+++ b/templates/base/backoffice/base.html
@@ -31,8 +31,9 @@
         </div>
     </div>
     <script src="{% static 'backoffice/assets/js/components/dark.js' %}"></script>
-    <script src="{% static 'backoffice/assets/extensions/perfect-scrollbar/perfect-scrollbar.min.js' %}"></script>
+    <script src="{% static 'backoffice/extensions/perfect-scrollbar/perfect-scrollbar.min.js' %}"></script>
     <script src="{% static 'backoffice/assets/js/app.js' %}"></script>
+    <script src="{% static 'backoffice/assets/js/helper/utils.js' %}"></script>
     {% block scripts %}{% endblock %}
 
 
