--- a/templates/backoffice/services/form.html
+++ b/templates/backoffice/services/form.html
@@ -96,11 +96,11 @@
 
                   <div class="col-12 d-flex justify-content-end">
                      <a href="{% url 'backoffice:service_list' %}" class="btn btn-light-secondary me-1 mb-1">
-                        <i class="bi bi-x me-2"></i>
+                        <i class="bi bi-x-circle me-2"></i>
                         Cancelar
                      </a>
                      <button type="submit" class="btn btn-primary me-1 mb-1">
-                        <i class="bi bi-check-circle-fill me-2"></i>
+                        <i class="bi bi-check-circle me-2"></i>
                         Guardar
                      </button>
                   </div>
