--- a/templates/backoffice/services/list.html
+++ b/templates/backoffice/services/list.html
@@ -70,7 +70,7 @@
             </form>
          </div>
          <div class="card-body">
-            <div class="table-responsive" style="min-height: 180px;">
+            <div class="table-responsive">
                <table class="table table-striped">
                   <thead>
                      <tr>
