--- a/templates/base/backoffice/base.html
+++ b/templates/base/backoffice/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page_title }} - 4 Pelos Club Barbers</title>
+    <title>{{ page_title }} | 4 Pelos Club Barbers</title>
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
     <link rel="stylesheet" crossorigin href="{% static 'backoffice/assets/css/app.css' %}">
     <link rel="stylesheet" crossorigin href="{% static 'backoffice/assets/css/app-dark.css' %}">
