--- a/templates/base/backoffice/sidebar.html
+++ b/templates/base/backoffice/sidebar.html
@@ -34,6 +34,15 @@
 
                 <li class="sidebar-title text-muted">Catalogo</li>
 
+                {% if perms.backoffice.view_category %}
+                <li class="sidebar-item {% if 'category_' in request.resolver_match.url_name %}active{% endif %}">
+                    <a href="{% url 'backoffice:category_list' %}" class='sidebar-link'>
+                        <i class="bi bi-tags"></i>
+                        <span>Categorías</span>
+                    </a>
+                </li>
+                {% endif %}
+
                 <li class="sidebar-item  ">
                     <a href="ui-file-uploader.html" class='sidebar-link'>
                         <i class="bi bi-box-seam"></i>
