--- a/templates/backoffice/categories/form.html
+++ b/templates/backoffice/categories/form.html
@@ -46,7 +46,7 @@
                                                 <label for="{{ form.name.id_for_label }}">{{ form.name.label }}</label>
                                                 {{ form.name }}
                                                 {% if form.name.errors %}
-                                                <div class="text-danger small">{{ form.name.errors }}</div>
+                                                <div class="invalid-feedback d-block">{{ form.name.errors.as_text }}</div>
                                                 {% endif %}
                                             </div>
                                         </div>
@@ -56,7 +56,7 @@
                                                 <label for="{{ form.description.id_for_label }}">{{ form.description.label }}</label>
                                                 {{ form.description }}
                                                 {% if form.description.errors %}
-                                                <div class="text-danger small">{{ form.description.errors }}</div>
+                                                <div class="invalid-feedback d-block">{{ form.description.errors.as_text }}</div>
                                                 {% endif %}
                                             </div>
                                         </div>
@@ -66,7 +66,7 @@
                                                 {{ form.status }}
                                                 <label class="form-check-label" for="{{ form.status.id_for_label }}">{{ form.status.label }}</label>
                                                 {% if form.status.errors %}
-                                                <div class="text-danger small">{{ form.status.errors }}</div>
+                                                <div class="invalid-feedback d-block">{{ form.status.errors.as_text }}</div>
                                                 {% endif %}
                                             </div>
                                         </div>
