feat(inventory): add supply entry management with weighted average cost logic
- Create SupplyEntry model with logic to update product stock and calculate weighted average cost on save.
- Implement full CRUD views and templates for supply entries.
- Add SupplyEntryFilter with keyword search (product/supplier) and date range.
- Integrate SupplyEntry API viewset and serializer.
- Update sidebar to include 'Entradas de Insumos' link.
- Add atomic transactions for data integrity during supply creation.
- Enable choices.js for product selection in forms and filters.

--- a/templates/base/backoffice/base.html
+++ b/templates/base/backoffice/base.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
     <link rel="stylesheet" crossorigin href="{% static 'backoffice/assets/css/app.css' %}">
     <link rel="stylesheet" crossorigin href="{% static 'backoffice/assets/css/app-dark.css' %}">
+    <link rel="stylesheet" href="{% static 'backoffice/extensions/choices.js/public/assets/styles/choices.css' %}">
     {% block styles %}{% endblock %}
 </head>
 
@@ -33,6 +34,7 @@
     <script src="{% static 'backoffice/assets/js/components/dark.js' %}"></script>
     <script src="{% static 'backoffice/extensions/perfect-scrollbar/perfect-scrollbar.min.js' %}"></script>
     <script src="{% static 'backoffice/assets/js/app.js' %}"></script>
+    <script src="{% static 'backoffice/extensions/choices.js/public/assets/scripts/choices.js' %}"></script>
     <script src="{% static 'backoffice/assets/js/helper/utils.js' %}"></script>
     {% block scripts %}{% endblock %}
 
